<resources>
    <string name="app_name">CollegeHelper</string>
    <string name="courses">Predmeti:</string>
    <string name="btnAddCourse">DODAJ PREDMET</string>
    <string name="hint_course_name_input">Unesi naziv predmeta*</string>
    <string name="hint_course_lecturer_input">Unesi predavača*</string>
    <string name="hint_course_num_of_absence_input">Unesi maksimalni broj izostanaka*</string>
    <string name="hint_course_additional_notes_input">Unesi dodatne bilješke</string>
    <string name="Required">* - Obavezno</string>
    <string name="slash">/</string>
    <string name="lecturer">Predavač:</string>
    <string name="additional_notes">Dodatne bilješke:</string>
    <string name="absences">Izostanci:</string>
    <string name="btnAddAbsence">Dodaj izostanak</string>
    <string name="label_no_course">Sorry, no such course exists.</string>
    <string name="dateOfAbsence">Datum izostanka:</string>
    <string name="numOfAbsences">Broj sati izostanaka</string>
    <string name="currentNumOfAbsences">Trenutno izostanaka:</string>
    <string name="required_text">Popunite sva polja koja imaju *</string>
    <string name="back">back_arrow</string>
</resources>