<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_course_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_course_name_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_course_name_input" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_course_lecturer_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_course_name_input">

        <EditText
            android:id="@+id/et_course_lecturer_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_course_lecturer_input" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_course_num_of_absence_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_course_lecturer_input">

        <EditText
            android:id="@+id/et_course_num_of_absence_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_course_num_of_absence_input" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_course_additional_notes_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_course_num_of_absence_input">

        <EditText
            android:id="@+id/et_course_additional_notes_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_course_additional_notes_input" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvRequired"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15sp"
        android:layout_marginTop="25sp"
        android:text="@string/Required"
        android:textColor="@color/red"
        android:textSize="11sp"
        app:layout_constraintTop_toBottomOf="@id/til_course_additional_notes_input"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btnAddCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/grey"
        android:text="@string/btnAddCourse"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>