<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvDateOfAbsenceDef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15sp"
        android:layout_marginTop="10sp"
        android:text="@string/dateOfAbsence"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <DatePicker
        android:id="@+id/dp_absence_date_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDateOfAbsenceDef" />

    <TextView
        android:id="@+id/tvNumOfAbsencesDef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15sp"
        android:layout_marginTop="20sp"
        android:text="@string/numOfAbsences"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dp_absence_date_input" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_subtractNumOfAbsences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="@color/grey"
        android:src="@drawable/minus"
        app:fabSize="normal"
        app:layout_constraintStart_toEndOf="@id/tvNumOfAbsencesDef"
        app:layout_constraintTop_toBottomOf="@id/dp_absence_date_input" />

    <TextView
        android:id="@+id/tvNumOfAbsences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15sp"
        android:layout_marginTop="20sp"
        android:text="1"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/fab_subtractNumOfAbsences"
        app:layout_constraintTop_toBottomOf="@id/dp_absence_date_input" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_addNumOfAbsences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="@color/grey"
        android:src="@android:drawable/ic_input_add"
        app:fabSize="normal"
        app:layout_constraintStart_toEndOf="@id/tvNumOfAbsences"
        app:layout_constraintTop_toBottomOf="@id/dp_absence_date_input" />

    <Button
        android:id="@+id/btnAddAbsence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/grey"
        android:text="@string/btnAddAbsence"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>